force-app/main/default/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Grade 1</fullName>
                </value>
                <value>
                    <fullName>Grade 2</fullName>
                </value>
                <value>
                    <fullName>Grade K</fullName>
                </value>
                <value>
                    <fullName>Grade 3</fullName>
                </value>
                <value>
                    <fullName>Grade 4</fullName>
                </value>
                <value>
                    <fullName>Grade 5</fullName>
                </value>
                <value>
                    <fullName>Grade 6</fullName>
                </value>
                <value>
                    <fullName>Grade 7</fullName>
                </value>
                <value>
                    <fullName>Grade 8</fullName>
                </value>
                <value>
                    <fullName>Grade 9</fullName>
                </value>
                <value>
                    <fullName>Grade 10</fullName>
                </value>
                <value>
                    <fullName>Grade 11</fullName>
                </value>
                <value>
                    <fullName>Grade 12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HasOptedOutOfSMS__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Added to the OBL Caretaker Registration process</description>
        <label>SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Homeless_Risk_Flag__c</fullName>
        <label>Homeless Risk Flag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Potential Homeless</fullName>
                </value>
                <value>
                    <fullName>Homeless</fullName>
                </value>
                <value>
                    <fullName>Not Homeless</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Household_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household Id</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Household</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPrimary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Login_Date_Time__c</fullName>
        <formula>Commuity_User__r.Last_Login_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Login Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeadConOwnerId__c</fullName>
        <description>This formula field is used to capture the LeadOwnerId value in Contact based on the Account.Family_Enrollment_Counselor__c on Account Object and referenced from  US# 342603.</description>
        <formula>IF(ISNULL(Account.Family_Enrollment_Counselor__c), OwnerId ,
(IF(Account.Family_Enrollment_Counselor__r.IsActive ,Account.Family_Enrollment_Counselor__c,OwnerId )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LeadConOwnerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Learning_Coach__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Coach</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Learning Coach</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Learning Coach)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nick__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Nickname</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <length>11</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>PCx_User_Email__c</fullName>
        <formula>Commuity_User__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PCx_User_Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCx_User_PearsonUID__c</fullName>
        <formula>Commuity_User__r.PearsonUID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PCx_User_PearsonUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCx_Username__c</fullName>
        <formula>Commuity_User__r.FederationIdentifier</formula>
        <label>PCx Username</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pcx_Contact_UserId__c</fullName>
        <formula>User__r.Id  &amp; &apos;-&apos; &amp;  Commuity_User__r.Id &amp; &apos;-&apos; &amp;  Commuity_User__r.Username &amp;&apos;-&apos;&amp; Caretaker_Id__r.Commuity_User__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pcx Contact UserId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postal_Mail_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ADO#188967</description>
        <label>Postal Mail Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrimaryEthnicity__c</fullName>
        <description>Primary Ethnicity:</description>
        <label>Primary Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>Black or African American</fullName>
                </value>
                <value>
                    <fullName>American Indian or Alaskan Native</fullName>
                </value>
                <value>
                    <fullName>Asian Indian</fullName>
                </value>
                <value>
                    <fullName>Other Pacific Islander</fullName>
                </value>
                <value>
                    <fullName>Filipino</fullName>
                </value>
                <value>
                    <fullName>Refuse To Report</fullName>
                </value>
                <value>
                    <fullName>Parent refused to report ethnicity</fullName>
                </value>
                <value>
                    <fullName>Cambodian</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Guamanian</fullName>
                </value>
                <value>
                    <fullName>Hawaiian</fullName>
                </value>
                <value>
                    <fullName>Hmong</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Laotian</fullName>
                </value>
                <value>
                    <fullName>Other Asian</fullName>
                </value>
                <value>
                    <fullName>Samoan</fullName>
                </value>
                <value>
                    <fullName>Tahitian</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
                <value>
                    <fullName>Asian: Asian Indian</fullName>
                    <isActive>false</isActive>
                    <label>Asian: Asian Indian</label>
                </value>
                <value>
                    <fullName>Asian: Cambodian</fullName>
                    <isActive>false</isActive>
                    <label>Asian: Cambodian</label>
                </value>
                <value>
                    <fullName>Asian: Chinese</fullName>
                    <isActive>false</isActive>
                    <label>Asian: Chinese</label>
                </value>
                <value>
                    <fullName>Asian: Japanese</fullName>
                    <isActive>false</isActive>
                    <label>Asian: Japanese</label>
                </value>
                <value>
                    <fullName>Asian: Korean</fullName>
                    <isActive>false</isActive>
                    <label>Asian: Korean</label>
                </value>
                <value>
                    <fullName>Asian: Laotian</fullName>
                    <isActive>false</isActive>
                    <label>Asian: Laotian</label>
                </value>
                <value>
                    <fullName>Asian: Other Asian</fullName>
                    <isActive>false</isActive>
                    <label>Asian: Other Asian</label>
                </value>
                <value>
                    <fullName>Asian: Vietnamese</fullName>
                    <isActive>false</isActive>
                    <label>Asian: Vietnamese</label>
                </value>
                <value>
                    <fullName>Hispanic or Latino</fullName>
                    <isActive>false</isActive>
                    <label>Hispanic or Latino</label>
                </value>
                <value>
                    <fullName>Pacific Islander: Guamanian</fullName>
                    <isActive>false</isActive>
                    <label>Pacific Islander: Guamanian</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Academic_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Academic Program</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Academic_Program_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_CT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary CT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Department</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Department Members</relationshipLabel>
        <relationshipName>Department_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Educational_Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Educational Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Institution Members</relationshipLabel>
        <relationshipName>Institution_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Sports_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Sports Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Organization Members</relationshipLabel>
        <relationshipName>Sport_Organization_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Principal_Review__c</fullName>
        <label>Principal Review</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Released</fullName>
                    <default>true</default>
                    <label>Released</label>
                </value>
                <value>
                    <fullName>Holded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Enrollment_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Program Enrollment Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Enrollment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Program_Enrollment</description>
        <label>Program Enrollment</label>
        <referenceTo>hed__Program_Enrollment__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recalculate_Sharing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Signifies if this records needs to be shared with school staff members</description>
        <inlineHelpText>Signifies if this records needs to be shared with school staff members</inlineHelpText>
        <label>Recalculate Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referral_Rock_Code__c</fullName>
        <description>ADO TASK 407874</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Referral Rock Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Rock_ID__c</fullName>
        <description>ADO TASK 407874</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Referral Rock ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region1__c</fullName>
        <description>As per the US#340832, This field is used to capture the Region value from &quot;Custom MetadaType&quot; based on BillingState provided on Account Object and It is referred to in the Region formula field for reducing the character limit.</description>
        <formula>IF(Account.ShippingState = $CustomMetadata.Region_Mappings__mdt.CO.MasterLabel, $CustomMetadata.Region_Mappings__mdt.CO.Region__c,IF(Account.ShippingState = $CustomMetadata.Region_Mappings__mdt.ID.MasterLabel, $CustomMetadata.Region_Mappings__mdt.ID.Region__c,IF(Account.ShippingState = $CustomMetadata.Region_Mappings__mdt.NM.MasterLabel, $CustomMetadata.Region_Mappings__mdt.NM.Region__c, IF(Account.ShippingState=$CustomMetadata.Region_Mappings__mdt.UT.MasterLabel,$CustomMetadata.Region_Mappings__mdt.UT.Region__c,IF(Account.ShippingState = $CustomMetadata.Region_Mappings__mdt.NV.MasterLabel, $CustomMetadata.Region_Mappings__mdt.NV.Region__c,IF(Account.ShippingState = $CustomMetadata.Region_Mappings__mdt.OR.MasterLabel, $CustomMetadata.Region_Mappings__mdt.OR.Region__c,IF(Account.ShippingState = $CustomMetadata.Region_Mappings__mdt.WA.MasterLabel, $CustomMetadata.Region_Mappings__mdt.WA.Region__c,&apos;&apos;)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>As per the US#340832, This field is used to capture the Region value from Custom MetadaType based on BillingState provided on Account Object</description>
        <formula>IF(Account.ShippingState = $CustomMetadata.Region_Mappings__mdt.AZ.MasterLabel, $CustomMetadata.Region_Mappings__mdt.AZ.Region__c, IF(Account.ShippingState=$CustomMetadata.Region_Mappings__mdt.AR.MasterLabel,$CustomMetadata.Region_Mappings__mdt.AR.Region__c,IF(Account.ShippingState = $CustomMetadata.Region_Mappings__mdt.CA.MasterLabel, $CustomMetadata.Region_Mappings__mdt.CA.Region__c,IF(Account.ShippingState = $CustomMetadata.Region_Mappings__mdt.WY.MasterLabel, $CustomMetadata.Region_Mappings__mdt.WY.Region__c,IF(Account.ShippingState = $CustomMetadata.Region_Mappings__mdt.FL.MasterLabel, $CustomMetadata.Region_Mappings__mdt.FL.Region__c, IF(Account.ShippingState=$CustomMetadata.Region_Mappings__mdt.IN.MasterLabel,$CustomMetadata.Region_Mappings__mdt.IN.Region__c,IF(Account.ShippingState = $CustomMetadata.Region_Mappings__mdt.MA.MasterLabel, $CustomMetadata.Region_Mappings__mdt.MA.Region__c,IF(Account.ShippingState = $CustomMetadata.Region_Mappings__mdt.OH.MasterLabel, $CustomMetadata.Region_Mappings__mdt.OH.Region__c,IF(Account.ShippingState = $CustomMetadata.Region_Mappings__mdt.PA.MasterLabel, $CustomMetadata.Region_Mappings__mdt.PA.Region__c, IF(Account.ShippingState=$CustomMetadata.Region_Mappings__mdt.SC.MasterLabel,$CustomMetadata.Region_Mappings__mdt.SC.Region__c,IF(Account.ShippingState = $CustomMetadata.Region_Mappings__mdt.GA.MasterLabel, $CustomMetadata.Region_Mappings__mdt.GA.Region__c,IF(Account.ShippingState = $CustomMetadata.Region_Mappings__mdt.MI.MasterLabel, $CustomMetadata.Region_Mappings__mdt.MI.Region__c,IF(Account.ShippingState = $CustomMetadata.Region_Mappings__mdt.ME.MasterLabel, $CustomMetadata.Region_Mappings__mdt.ME.Region__c, IF(Account.ShippingState=$CustomMetadata.Region_Mappings__mdt.AL.MasterLabel,$CustomMetadata.Region_Mappings__mdt.AL.Region__c,IF(Account.ShippingState = $CustomMetadata.Region_Mappings__mdt.MN.MasterLabel, $CustomMetadata.Region_Mappings__mdt.MN.Region__c,IF(Account.ShippingState = $CustomMetadata.Region_Mappings__mdt.KS.MasterLabel, $CustomMetadata.Region_Mappings__mdt.KS.Region__c,IF(Account.ShippingState = $CustomMetadata.Region_Mappings__mdt.TN.MasterLabel, $CustomMetadata.Region_Mappings__mdt.TN.Region__c, IF(Account.ShippingState=$CustomMetadata.Region_Mappings__mdt.IA.MasterLabel,$CustomMetadata.Region_Mappings__mdt.IA.Region__c,IF(Account.ShippingState = $CustomMetadata.Region_Mappings__mdt.MO.MasterLabel, $CustomMetadata.Region_Mappings__mdt.MO.Region__c,IF(Account.ShippingState = $CustomMetadata.Region_Mappings__mdt.OK.MasterLabel, $CustomMetadata.Region_Mappings__mdt.OK.Region__c,IF(Account.ShippingState = $CustomMetadata.Region_Mappings__mdt.TX.MasterLabel, $CustomMetadata.Region_Mappings__mdt.TX.Region__c, IF(Account.ShippingState=$CustomMetadata.Region_Mappings__mdt.WI.MasterLabel,$CustomMetadata.Region_Mappings__mdt.WI.Region__c,Region1__c))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Father</fullName>
                </value>
                <value>
                    <fullName>Mother</fullName>
                </value>
                <value>
                    <fullName>Brother</fullName>
                </value>
                <value>
                    <fullName>Sister</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <description>This field was created based on US #. 216768 (PI-03, Sprint-02).,Request Type&apos; used  to capture the  SIS Update Request.</description>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Additional Household Member</fullName>
                </value>
                <value>
                    <fullName>UserInfo Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SIS_Integration_Status__c</fullName>
        <description>This field was created based on US #. 216768 (PI-03, Sprint-02). The purpose of this field is to capture the SIS Integration Status.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SIS Integration Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIS_Update_Requested__c</fullName>
        <description>This field was created based on US #. 216768 (PI-03, Sprint-02).The purpose of this field to update the request from SIS system</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SIS Update Requested</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMS_Phone_Number__c</fullName>
        <description>ADO#146819
This field is populated by a contact process builder process</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SMS Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>School_Account_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>School Account ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>School Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Year__c</fullName>
        <label>School Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2016-2017</fullName>
                </value>
                <value>
                    <fullName>2017-2018</fullName>
                </value>
                <value>
                    <fullName>2018-2019</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Ethnicity__c</fullName>
        <description>If your student is multi-racial, please use this field to identify the &lt;strong&gt;secondary&lt;/strong&gt; ethnicity/race</description>
        <label>Secondary Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>American Indian or Alaskan Native</fullName>
                </value>
                <value>
                    <fullName>Asian Indian</fullName>
                </value>
                <value>
                    <fullName>Cambodian</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Laotian</fullName>
                </value>
                <value>
                    <fullName>Other Asian</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
                <value>
                    <fullName>Black or African American</fullName>
                </value>
                <value>
                    <fullName>Filipino</fullName>
                </value>
                <value>
                    <fullName>Guamanian</fullName>
                </value>
                <value>
                    <fullName>Hawaiian</fullName>
                </value>
                <value>
                    <fullName>Other Pacific Islander</fullName>
                </value>
                <value>
                    <fullName>Samoan</fullName>
                </value>
                <value>
                    <fullName>Tahitian</fullName>
                </value>
                <value>
                    <fullName>Parent refused to report ethnicity</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>Hmong</fullName>
                </value>
                <value>
                    <fullName>Refuse To Report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Section_Sequence__c</fullName>
        <label>Section Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Semester__c</fullName>
        <label>Semester</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Summer</fullName>
                </value>
                <value>
                    <fullName>Spring</fullName>
                </value>
                <value>
                    <fullName>Fall</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Social_Security_Number_Masked__c</fullName>
        <formula>IF( NOT(  ISBLANK(Social_Security_Number__c) ) ,( &apos;***-**-&apos;+ RIGHT(Social_Security_Number__c , 4)) , NULL)</formula>
        <label>Social Security Number(SSN)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Security_Number__c</fullName>
        <description>To store the Social Security Number for each student</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Social Security Number(SSN)</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>hed__Current_Address__r.hed__MailingState__c</formula>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_of_Birth__c</fullName>
        <description>State of Birth</description>
        <label>State of Birth</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>FM</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Percentage__c</fullName>
        <label>Status Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Student_Act_Status__c</fullName>
        <formula>ISPICKVAL( Program_Enrollment__r.Status__c, &apos;In Progress&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Act Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Student_Id__c</fullName>
        <displayFormat>S-{00000}</displayFormat>
        <label>Student Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Technology_Flag__c</fullName>
        <label>Technology Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TellusabouturFamily__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TellusabouturFamily</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tribal_Affiliation__c</fullName>
        <description>Tribal Affiliation</description>
        <label>Tribal Affiliation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acoma</fullName>
                </value>
                <value>
                    <fullName>Cochiti</fullName>
                </value>
                <value>
                    <fullName>Isleta</fullName>
                </value>
                <value>
                    <fullName>Jemez</fullName>
                </value>
                <value>
                    <fullName>Jicarilla Apache</fullName>
                </value>
                <value>
                    <fullName>Kewa (formerly Santo Domingo)</fullName>
                </value>
                <value>
                    <fullName>Laguna</fullName>
                </value>
                <value>
                    <fullName>Mescalero Apache</fullName>
                </value>
                <value>
                    <fullName>Nambe</fullName>
                </value>
                <value>
                    <fullName>Navajo</fullName>
                </value>
                <value>
                    <fullName>Ohkay Owingeh (formerly San Juan)</fullName>
                </value>
                <value>
                    <fullName>Picuris</fullName>
                </value>
                <value>
                    <fullName>Pojoaque</fullName>
                </value>
                <value>
                    <fullName>San Felipe</fullName>
                </value>
                <value>
                    <fullName>San Ildefonso</fullName>
                </value>
                <value>
                    <fullName>Sandia</fullName>
                </value>
                <value>
                    <fullName>Santa Ana</fullName>
                </value>
                <value>
                    <fullName>Santa Clara</fullName>
                </value>
                <value>
                    <fullName>Taos</fullName>
                </value>
                <value>
                    <fullName>Tesuque</fullName>
                </value>
                <value>
                    <fullName>Zia</fullName>
                </value>
                <value>
                    <fullName>Zuni</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>